GetCircuit Spoke APi integration

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,11 @@
     "Audience": "NYR.API.Users",
     "ExpirationHours": 24
   },
+  "SpokeApi": {
+    "ApiKey": "cpMWZhCWoyfUH4YV2O0w",
+    "BaseUrl": "https://api.spoke.com/v1",
+    "TimeoutSeconds": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
