Spoke Api added

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NYR_Database_Dev;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
+  "SpokeApi": {
+    "ApiKey": "cpMWZhCWoyfUH4YV2O0w",
+    "BaseUrl": "https://api.spoke.com/v1",
+    "TimeoutSeconds": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
